Add basic website structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<p>Test.</p>
+<!DOCTYPE html>
+<html lang="en">
+
+  <head>
+    <meta charset="UTF-8" />
+
+    <title>Thomas Leese</title>
+  </head>
+
+  <body>
+    <h1>Thomas Leese</h1>
+  </body>
+
+</html>
