--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
       <footer class="links">
         <ul>
           <li><a id="email-link" href="mailto:">Email</a></li>
-          <li><a href="https://github.com/tomleese">GitHub</a></li>
-          <li><a href="https://twitter.com/tomleese">Twitter</a></li>
+          <li><a href="https://github.com/thomasleese">GitHub</a></li>
           <li><a href="https://uk.linkedin.com/in/thomasleese">LinkedIn</a></li>
         </ul>
       </footer>
