Add links to TL²

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main class="page">
       <article class="about-box">
         <h1>Thomas Leese</h1>
-        <p>Developer &amp; Designer</p>
+        <p>Developer &amp; Designer at <a href="https://www.tlsquared.com">TL²</a></p>
       </article>
 
       <article class="projects-box" hidden>
