--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <footer class="links">
         <ul>
           <li><a href="#projects" class="projects-button">Projects</a></li>
-          <li><a id="email-link" href="mailto:">Email</a></li>
+          <li><a href="mailto:inbox@thomasleese.me">Email</a></li>
           <li><a href="https://github.com/thomasleese">GitHub</a></li>
           <li><a href="https://uk.linkedin.com/in/thomasleese">LinkedIn</a></li>
         </ul>
@@ -46,20 +46,6 @@
     </main>
 
     <script>
-      (function() {
-        var letters = ['a', 'b', 'e', 'h', 'i', 'l', 'm', 'n', 'o', 's', 't', 'x', '@', '.'];
-        var join = function() {
-          var s = '';
-          for (var i = 0; i < arguments.length; i++) {
-            s += letters[arguments[i]];
-          }
-          return s;
-        };
-
-        var s = join(4, 7, 1, 8, 11, 12, 10, 3, 8, 6, 0, 9, 5, 2, 2, 9, 2, 13, 6, 2);
-        document.getElementById('email-link').href = 'mailto:' + s;
-      }());
-
       (function() {
         var $projectsBox = document.querySelector('.projects-box');
         var $closeButton = document.querySelector('.close-button');
