--- a/index.html
+++ b/index.html
@@ -1,77 +1,37 @@
----
----
-
 <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
     <title>Thomas Leese</title>
 
-    <link rel="stylesheet" href="//brick.a.ssl.fastly.net/PT+Sans:400,700" />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css" />
 
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="icon.png" />
+    <link href="theme.css" rel="stylesheet" />
+
+    <link rel="icon" href="images/icon.png" />
   </head>
 
   <body>
-    <main class="page">
-      <article class="about-box">
-        <h1>Thomas Leese</h1>
-        <p>Developer &amp; Designer at <a href="https://www.tlsquared.com">TL²</a></p>
-      </article>
+    <main class="london-eye">
+      <header class="text-xs-center p-t-3 p-b-3">
+        <h1 class="display-3 m-t-3">Thomas Leese</h1>
+      </header>
 
-      <article class="projects-box" hidden>
-        {% for project in site.data.projects %}
-          <section>
-            <h2><a href="{{ project.url }}">{{ project.name }}</a></h2>
-            <p>{{ project.description }}</p>
-          </section>
-        {% endfor %}
+      <main class="text-xs-center p-t-2">
+        <p class="lead" style="width: 50%; margin: auto;">Hi. I’m a software developer specialising in Web technologies. I am currently studying <a href="http://www.southampton.ac.uk/webscience/index.page">Web Science</a> at the <a href="http://www.southampton.ac.uk/">University of Southampton</a>.</p>
+      </main>
 
-        <a class="close-button" href="#">╳</a>
-      </article>
-
-      <footer class="links">
-        <ul>
-          <li><a href="#projects" class="projects-button">Projects</a></li>
-          <li><a href="mailto:inbox@thomasleese.me">Email</a></li>
-          <li><a href="https://github.com/thomasleese">GitHub</a></li>
-          <li><a href="https://uk.linkedin.com/in/thomasleese">LinkedIn</a></li>
-        </ul>
+      <footer>
+        <nav class="nav nav-inline text-xs-center m-t-2 m-b-2">
+          <a class="nav-link" href="mailto:inbox@thomasleese.me">Email</a>
+          <a class="nav-link" href="https://github.com/thomasleese">GitHub</a>
+          <a class="nav-link" href="https://uk.linkedin.com/in/thomasleese">LinkedIn</a>
+          <a class="nav-link" href="https://twitter.com/tomleese">Twitter</a>
+        </nav>
       </footer>
     </main>
 
-    <script>
-      (function() {
-        var $projectsBox = document.querySelector('.projects-box');
-        var $closeButton = document.querySelector('.close-button');
-        var $projectsButton = document.querySelector('.projects-button');
-
-        $closeButton.onclick = function(e) {
-          e.preventDefault();
-          $projectsBox.hidden = true;
-        };
-
-        $projectsButton.onclick = function(e) {
-          e.preventDefault();
-          $projectsBox.hidden = false;
-        };
-      }());
-    </script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-67168623-2', 'auto');
-      ga('send', 'pageview');
-    </script>
+    <script src="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/js/bootstrap.js"></script>
   </body>
-
 </html>
