--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@ layout: page
 ---
 
 <section>
+  <h1>Projects</h1>
+  <hr />
+
+  <div class="card-columns">
+    {% for project in site.data.projects %}
+      <div class="card">
+        <div class="card-block">
+          <h4 class="card-title">{{ project.title }}</h4>
+          <p class="card-text">{{ project.description }}</p>
+          <a href="{{ project.url }}" class="card-link">More information</a>
+        </div>
+      </div>
+    {% endfor %}
+  </div>
+</section>
+
+<section>
   <h1>Latest Posts</h1>
+  <hr />
 
   {% for post in site.posts %}
     <article>
