--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: page
   </div>
 </section>
 
-<section>
+<!-- <section>
   <h1>Latest Posts</h1>
   <hr />
 
@@ -29,4 +29,4 @@ layout: page
       <p>{{ post.excerpt }}</p>
     </article>
   {% endfor %}
-</section>
+</section> -->
