--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@ layout: base
 </header>
 
 <main>
+  <section id="about">
+    <h1>About</h1>
+
+    <p>I'm a software engineer currently working for <a href="http://www.controlsdata.com/">Rolls-Royce</a> and previously studied at the <a href="http://www.southampton.ac.uk/">University of Southampton</a>.
+  </section>
+
   <section id="projects">
     <h1>Projects</h1>
 
