--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@ layout: base
 
 <main>
   <section id="about">
-    <h1>About</h1>
-
-    <p>I'm a software engineer currently working for <a href="http://www.controlsdata.com/">Rolls-Royce</a> and previously studied at the <a href="http://www.southampton.ac.uk/">University of Southampton</a>.
+    <p class="lead">I'm a software engineer currently working for <a href="http://www.controlsdata.com/">Rolls-Royce</a> and previously studied at the <a href="http://www.southampton.ac.uk/">University of Southampton</a>.
   </section>
 
   <section id="projects">
