--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: base
 
 <main>
   <section id="about">
-    <p class="lead">I'm a software engineer currently working for the <a href="https://www.gov.uk/government/organisations/government-digital-service">Government Digital Service</a> and previously studied at the <a href="http://www.southampton.ac.uk/">University of Southampton</a>.
+    <p class="lead">I'm a software developer currently working for the <a href="https://www.gov.uk/government/organisations/government-digital-service">Government Digital Service</a> and previously studied at the <a href="http://www.southampton.ac.uk/">University of Southampton</a>.
   </section>
 
   <section id="projects">
