--- a/index.html
+++ b/index.html
@@ -24,4 +24,7 @@ layout: base
 
 <footer>
   <a href="mailto:thomas@leese.io"><strong>thomas</strong>@leese.io</a>
+  
+  <br /><br />
+  <span style="color: white;">Miss Vanji</span>
 </footer>
