--- a/index.html
+++ b/index.html
@@ -23,8 +23,5 @@ layout: base
 </main>
 
 <footer>
-  <a href="mailto:thomas@leese.io"><strong>thomas</strong>@leese.io</a>
-  
-  <br /><br />
-  <span style="color: white;">Miss Vanji</span>
+  <a href="mailto:{{ site.email }}"><strong>thomas</strong>@leese.io</a>
 </footer>
