Update lead paragraph

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@ layout: base
 
 <main>
   <section id="about">
-    <p class="lead">I'm a software developer currently working for the <a href="https://www.gov.uk/government/organisations/government-digital-service">Government Digital Service</a> and previously studied at the <a href="http://www.southampton.ac.uk/">University of Southampton</a>.
+    <p class="lead">
+      I’m a software developer currently working for the UK’s <a href="https://www.gov.uk/government/organisations/department-for-education">Department for Education</a>
+      and previously studied at the <a href="http://www.southampton.ac.uk/">University of Southampton</a>.
+    </p>
   </section>
 
   <section id="employments">
